[tool.poetry]
name = "python-roaring64"
version = "0.1.0"
description = "roaring64 wrapper of pyroaring implemented in pure python"
authors = ["HuangYi <huang@crypto.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyroaring = "^0.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
